[CSS FIX] remove extra padding / margin

--- a/ui/src/components/SampleQueue/app.css
+++ b/ui/src/components/SampleQueue/app.css
@@ -151,7 +151,7 @@
   margin-bottom: 10px;
 }
 .list-head {
-  padding: 1.5rem 1rem;
+  padding: 1rem 1rem;
   border: 0px;
 }
 .list-body {
